--- a/location_match_score/CMakeLists.txt
+++ b/location_match_score/CMakeLists.txt
@@ -21,7 +21,7 @@ find_package(catkin REQUIRED
 
 find_package(Boost REQUIRED )
 find_package(Eigen3 REQUIRED)
-find_package(yaml-cpp REQUIRED)
+#find_package(yaml-cpp REQUIRED)
 find_package(OpenCV 3 REQUIRED) 
 
 include_directories(include)
